--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <html>
 <body>
-	<p id="content"></p>
-	<p><button id="loadCat">Lazy load <b>Cat</b></button></p>
-	<script src="../dist/preload.bundle.js"></script>
+    <div id="app">
+    {{ msg }}
+    </div>
+	<script src="../dist/index.bundle.js"></script>
 </body>
 </html>
