Experimenting with vue-class-component

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <html>
 <body>
-    <div id="app">
-    {{ msg }}
+    <!-- <div id="app">
+         {{ msg }}
+         </div> -->
+    <div id="el">
     </div>
 	<script src="../dist/index.bundle.js"></script>
 </body>
