Got component working within another component

--- a/src/app.tpl.html
+++ b/src/app.tpl.html
@@ -1,4 +1,4 @@
-<div id="app">test</div>
-<div>
-    <input type="text" name="test" id="test">
+<div id="app">
+    test1
+    <item></item>
 </div>
