--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,6 @@
 <body>
     <div id="el">
     </div>
-	<script src="../dist/index.bundle.js"></script>
+	<script src="../dist/app.bundle.js"></script>
 </body>
 </html>
