--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
-    <div id="el">
-    </div>
+  <div id="app">
+  </div>
 	<script src="../dist/app.bundle.js"></script>
 </body>
 </html>
