Adding the first VueJS example

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
   <div id="app">
+    {{ person.first }} {{ person.last }}
   </div>
 	<script src="../dist/app.bundle.js"></script>
 </body>
