Got example 2 working

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <body>
   <div id="app">
     {{ person.first }} {{ person.last }}
+    <input type="button" @click="changePerson" value="Change person"/>
   </div>
 	<script src="../dist/app.bundle.js"></script>
 </body>
