Added VueJS 2 Beta

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>VueJS Demo</title>
+</head>
 <body>
   <div id="app">
     {{ person.first }} {{ person.last }}
