--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 <body>
   <div id="app">
     {{ person.first }} {{ person.last }}
+    <input type="button" @click="changePerson" value="Change person">
   </div>
 	<script src="../js/dist/app.bundle.js"></script>
 </body>
