--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>VueJS Demo</title>
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-  <div id="app">
+  <div id="app" v-cloak>
     <ul>
       <li v-for="(person, index) in people">
         {{ person.first }} {{ person.last }}
       </li>
     </ul>
   </div>
-	<script src="../js/dist/app.bundle.js"></script>
+  <script src="../js/dist/app.bundle.js"></script>
 </body>
 </html>
