Adding hideshow example, along with cloak and user input

--- a/public/examples/index.html
+++ b/public/examples/index.html
@@ -14,6 +14,9 @@
   <a href="person/index.html">Person</a>
   <a href="people/index.html">People</a>
   <a href="person_change/index.html">Change person</a>
+  <a href="cloak/index.html">Cloak (stop flickering on load)</a>
+  <a href="input/index.html">Input</a>
+  <a href="hideshow/index.html">Hide/Show</a>
 </body>
 </html>
 
