Added CSS classes example

--- a/public/examples/index.html
+++ b/public/examples/index.html
@@ -17,6 +17,7 @@
   <a href="cloak/index.html">Cloak (stop flickering on load)</a>
   <a href="input/index.html">Input</a>
   <a href="hideshow/index.html">Hide/Show</a>
+  <a href="css-classes/index.html">CSS Classes</a>
 </body>
 </html>
 
