--- a/public/examples/css-classes/index.html
+++ b/public/examples/css-classes/index.html
@@ -18,7 +18,7 @@
   </style>
 
   <div id="app">
-    <div :class="resultClasses" class="output">The name you entered was: {{ opinion }}</div>
+    <div :class="resultClasses" class="output">Opinion: {{ opinion }}</div>
 
     <label for="name">Name</label>
     <input id="name" type="text" v-model="name">
